# ocr-chunker-crud-vectordb

./: README.md  pyproject.toml
app/: main.py
app/api/: files.py
app/services/: chunking.py  ocr.py
app/src/: main.py
app/src/api/: files.py
app/src/files/output/: docling-paper.md
app/src/services/: ocr.py
