[project]
name = "docling-chunker"
version = "0.1.0"
description = ""
authors = [
    {name = "celestelgarrido"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn[standard] (>=0.34.0,<0.35.0)",
    "docling (>=2.28.0,<3.0.0)",
    "pinecone (>=6.0.2,<7.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
