[project]
name = "app"
version = "0.1.0"
description = ""
authors = [
    {name = "celestelgarrido"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn[standard] (>=0.34.0,<0.35.0)",
    "docling (>=2.28.0,<3.0.0)",
    "pinecone (>=6.0.2,<7.0.0)",
    "docling-ibm-models (>=3.4.1,<4.0.0)",
    "transformers (>=4.42.0,<5.0.0)",
    "langchain-text-splitters (>=0.3.7,<0.4.0)",
    "langchain (>=0.3.21,<0.4.0)",
    "langchain-experimental (>=0.3.4,<0.4.0)",
    "langchain-openai (>=0.3.10,<0.4.0)",
    "llama-index (>=0.12.25,<0.13.0)",
    "llama-index-embeddings-huggingface (>=0.5.2,<0.6.0)",
    "llama-index-core (>=0.12.25,<0.13.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
